<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal"
    android:layout_margin="10dp"
    >
    <ImageView
        android:id="@+id/img_Recipe"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/category_mon_canh"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="5">
            <TextView
                android:id="@+id/food_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_name"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_weight="2"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author_name"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/author_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author_name"
                    android:textSize="14sp"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tag1"
                    android:textSize="14sp"
                    />
                <TextView
                    android:id="@+id/tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tag"
                    android:textSize="14sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ratting"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/ratting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ratting"
                    android:textSize="14sp"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/id_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idRecipe"
                android:textSize="14sp"
                android:layout_gravity="end"/>
            <ImageButton
                android:id="@+id/bt_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite"
                android:layout_gravity="end"
                android:layout_marginTop="40dp"
                android:backgroundTint="@android:color/transparent"
                app:tint="@color/gray"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

</androidx.appcompat.widget.LinearLayoutCompat>